--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,10 @@
     "polymer": "Polymer/polymer#^1.2.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "web-component-tester": "^4.0.0"
+  "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+  "iron-demo-helpers": "^1.2.3",
+  "web-component-tester": "^4.0.0",
+  "paper-button": "^1.0.11",
+  "paper-input": "^1.1.11"
   }
 }
