--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "things-global-behavior",
-  "version": "v2.0.0",
+  "version": "2.2.0",
   "authors": [
     "Hatio Lab. <heartyoh@hatiolab.com>"
   ],
@@ -11,8 +11,8 @@
     "seed"
   ],
   "main": "things-global-behavior.html",
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/ThingsElements/things-global-behavior/",
+  "license": "http://license.hatiolab.com/EULA",
+  "homepage": "http://elements.hatiolab.com/",
   "ignore": [
     "/.*",
     "/test/"
@@ -21,10 +21,10 @@
     "polymer": "Polymer/polymer#^1.2.0"
   },
   "devDependencies": {
-  "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-  "iron-demo-helpers": "^1.2.3",
-  "web-component-tester": "^4.0.0",
-  "paper-button": "^1.0.11",
-  "paper-input": "^1.1.11"
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-demo-helpers": "^1.2.3",
+    "web-component-tester": "^4.0.0",
+    "paper-button": "^1.0.11",
+    "paper-input": "^1.1.11"
   }
 }
